import "Event.proto";
package ProtocolBuffers.GameAnalytics;

message DesignEvent
{
	extend Event
	{
		optional float value 				= 100;
	}
}